RestApi , React edited

--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block main %}
 <div id="content"></div>
+<div id="main_container"></div>
 <script src="/static/build/gamelist.js"></script>
 {% endblock %}
