--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block main %}
+<div class="text-center"><h1>List of Games</h1></div>
 <div id="content"></div>
-<div id="main_container"></div>
+<div id="main_container" class="col-md-8 col-md-offset-2"></div>
 <script src="/static/build/gamelist.js"></script>
 {% endblock %}
